{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 76,
  "lineage": "627d96b5-b97b-d181-0660-caa20410a3af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf4b18d5cde14fc9",
            "arn": "arn:aws:ec2:eu-west-3:440879059541:elastic-ip/eipalloc-0bf4b18d5cde14fc9",
            "association_id": "eipassoc-0601bc2f46e4760df",
            "domain": "vpc",
            "id": "eipalloc-0bf4b18d5cde14fc9",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0e51bac362ee44490",
            "private_dns": "ip-10-0-1-195.eu-west-3.compute.internal",
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-51-44-232-121.eu-west-3.compute.amazonaws.com",
            "public_ip": "51.44.232.121",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:440879059541:internet-gateway/igw-040363ae7e693a3ab",
            "id": "igw-040363ae7e693a3ab",
            "owner_id": "440879059541",
            "tags": {
              "Name": "devops-platform-igw"
            },
            "tags_all": {
              "Name": "devops-platform-igw"
            },
            "vpc_id": "vpc-093345312ff1098c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf4b18d5cde14fc9",
            "association_id": "eipassoc-0601bc2f46e4760df",
            "connectivity_type": "public",
            "id": "nat-022933781a1cfe7ec",
            "network_interface_id": "eni-0e51bac362ee44490",
            "private_ip": "10.0.1.195",
            "public_ip": "51.44.232.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e8fc1166397913e6",
            "tags": {
              "Name": "devops-platform-nat"
            },
            "tags_all": {
              "Name": "devops-platform-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:440879059541:route-table/rtb-040abdcbf6b92b079",
            "id": "rtb-040abdcbf6b92b079",
            "owner_id": "440879059541",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022933781a1cfe7ec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-platform-private-rt"
            },
            "tags_all": {
              "Name": "devops-platform-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-093345312ff1098c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:440879059541:route-table/rtb-06530f0a15308a7ef",
            "id": "rtb-06530f0a15308a7ef",
            "owner_id": "440879059541",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040363ae7e693a3ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-platform-public-rt"
            },
            "tags_all": {
              "Name": "devops-platform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-093345312ff1098c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d85f8d3e9da950b",
            "route_table_id": "rtb-040abdcbf6b92b079",
            "subnet_id": "subnet-0cadc0682fe19d9e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d8c29fe1294428f",
            "route_table_id": "rtb-040abdcbf6b92b079",
            "subnet_id": "subnet-096a41522d3c80923"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f11ffe60c2156a33",
            "route_table_id": "rtb-06530f0a15308a7ef",
            "subnet_id": "subnet-0e8fc1166397913e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d13c98eaa98e907e",
            "route_table_id": "rtb-06530f0a15308a7ef",
            "subnet_id": "subnet-0567240a95f706ba3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:440879059541:subnet/subnet-0cadc0682fe19d9e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cadc0682fe19d9e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440879059541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-platform-private-1"
            },
            "tags_all": {
              "Name": "devops-platform-private-1"
            },
            "vpc_id": "vpc-093345312ff1098c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:440879059541:subnet/subnet-096a41522d3c80923",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096a41522d3c80923",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440879059541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-platform-private-2"
            },
            "tags_all": {
              "Name": "devops-platform-private-2"
            },
            "vpc_id": "vpc-093345312ff1098c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:440879059541:subnet/subnet-0e8fc1166397913e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8fc1166397913e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440879059541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-platform-public-1"
            },
            "tags_all": {
              "Name": "devops-platform-public-1"
            },
            "vpc_id": "vpc-093345312ff1098c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:440879059541:subnet/subnet-0567240a95f706ba3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0567240a95f706ba3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440879059541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-platform-public-2"
            },
            "tags_all": {
              "Name": "devops-platform-public-2"
            },
            "vpc_id": "vpc-093345312ff1098c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:440879059541:vpc/vpc-093345312ff1098c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09180ad9858197032",
            "default_route_table_id": "rtb-0aca1eb067fb7daa5",
            "default_security_group_id": "sg-05fbae09b080bd94e",
            "dhcp_options_id": "dopt-050340c9b2fd9d151",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093345312ff1098c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aca1eb067fb7daa5",
            "owner_id": "440879059541",
            "tags": {
              "Name": "devops-platform-vpc"
            },
            "tags_all": {
              "Name": "devops-platform-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}